--- a/pagina1.html
+++ b/pagina1.html
@@ -35,7 +35,7 @@
     <div class="container">
         <h1>Prima mea pagina Web realizata in 14.11.2024</h1>
         <p>Curand am sa devin un <span class="bold-text">expert</span> HTML</p>
-        <p>Pagina realizata de: <span class="italic-text">Malcomete. Luiza Maria</span></p>
+        <p>Pagina realizata de: <span class="italic-text">M. Luiza Maria</span></p>
     </div>
 </body>
 </html>
